week2/00_default_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: default-deny
 namespace: yaobank-database
spec:
 podSelector: {}
 policyTypes:
 - Ingress
 - Egress
